alignments fixes on rules side of board

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 h3 {
-  margin-bottom: 50px;
+  margin-bottom: 70px;
 }
 
 h2,
@@ -19,6 +19,14 @@ h4 {
 }
 h6 {
   color: #e67212;
+}
+
+li {
+  margin-left: 35px;
+}
+.rules-header {
+  margin-bottom: 40px;
+  text-align: center;
 }
 
 canvas {
@@ -80,7 +88,7 @@ button:hover {
 }
 
 .preset-button {
-  margin: 10px;
+  margin-bottom: 30px;
   width: 200px;
   height: 37px;
   background-color: #313131;
@@ -112,8 +120,8 @@ button:hover {
 .rules {
   display: flex;
   flex-direction: column;
-  margin-top: 25px;
   padding-top: 5rem;
+  margin-left: 45;
 }
 .presets {
   margin-left: 52px;
@@ -122,21 +130,27 @@ button:hover {
   max-width: 100%;
 }
 .preset-title {
-  text-align: center;
+  margin-left: 100px;
+  /* text-align: center; */
   margin-top: 5rem;
+}
+
+.rules-subtitle {
+  margin-left: 40px;
+  margin-bottom: 15px;
 }
 .preset-button-container {
   display: flex;
   width: 100%;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .buttons {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   flex-direction: column;
-  text-align: center;
-  margin-top: 100px;
+  /* text-align: center; */
+  margin-top: 40px;
 }
 
 .game {
